@@ -4,3 +4,5 @@ Made my custom log function also output to the Downloader.log file
 
 2.14.7
 Added handling for .mkv files because apparently that wasn't a thing I was doing.
+Add handling for more direct links from cyberdrop (maybe, might cause issues)
+Fixed my instant returns for 400-500 status.
